# Zacaim-WiFi-Tool

./: .gitignore  README.md  SESSION_HANDOFF.md  pyproject.toml  zacaim_v2.py  zacaim_wifi_tool.py
legacy/: README.md  zacaim_wifi_tool.py
tests/: test_cli.py  test_filesystem.py  test_health.py  test_parsers.py  test_reports.py  test_scanners.py  test_validators.py
zacaim/: __init__.py  __main__.py  analyzers.py  app.py  constants.py  engagements.py  filesystem.py  health.py  models.py  parsers.py  reports.py  runners.py  scanners.py  ui.py  validators.py  workspace.py
