[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zacaim"
version = "2.5.0"
description = "Terminal-first operator workbench for authorized host and web discovery workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Rotem Zacaim" }
]
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.7"]
dev = ["pytest>=8.2"]

[project.scripts]
zacaim = "zacaim.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
